[VTK-5075] Add 'nashorn' extension with Javascript request handler
Currently accepts a 'script' request parameter and maps that to a
script in /vrtx/scripts. If the script parameter resolves to a valid
script containing a function 'handle(ctx)', that function is executed
as the request handler.

Example of a handler function:

var handler = function(ctx) {
   var repo = ctx.module('repo');
    repo.load({ uri: '/vrtx/decorating/config.txt' }, function(err, resource) {
        if (err) {
            ctx.write("Error: " + err);
            ctx.end();
        }
	else {
            ctx.contentType('text/html;charset=utf-8');
            ctx.write('<html><head><title>Listing</title></head><body>');
            ctx.write('<h1>' + resource.properties.title + '</h1><ul>');
            ctx.end('</ul></body></html>');
        }
    });
 }

[VTK-5075] Add mustache templating module for Javascript handlers

[VTK-5075] WIP: futures cleanup

[VTK-5075] WIP: context and callbacks

[VTK-5075] WIP: use futures instead of Result in most APIs

[VTK-5075] WIP: move JavascriptEngine to vtk.js

[VTK-5075] WIP: move JavascriptEngine to vtk.js

[VTK-5075] WIP: Make Javascript available as 'nashorn' extension

[VTK-5075] WIP: Fix class name in bean config